# esp32_headphones

./: README.md
client/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults
client/main/: CMakeLists.txt  bt_transport.cpp  bt_transport.h  btstack_impl.cpp  btstack_impl.h  client.cpp  common_util.cpp  common_util.h  ctl_periph.cpp  ctl_periph.h  event_bridge.cpp  event_bridge.h  hf_handle.cpp  hf_handle.h  hf_status.h  idf_component.yml  main.cpp  net_transport.cpp  net_transport.h  sco_demo_util.cpp  sco_demo_util.h  sco_util.cpp  sco_util.h  stream_bridge.cpp  stream_bridge.h  stream_bridge_legacy.cpp  wifi_util.cpp  wifi_util.h
client/scripts/: ADF_IDF_PATHS.txt  ESP_ADF_PATH.txt  IDF_PATH.txt  addr2line.bat  export.bat
components/controller/: CMakeLists.txt  controller.cpp  controller.h
components/impl/: CMakeLists.txt  asio_impl.h  asio_io_context.cpp  concurrency_freertos.cpp  concurrency_posix.cpp  esp_impl.cpp  esp_impl.h  freertos_impl.h  impl.h  log.cpp  posix_impl.h  pthread_impl.h  sfml_impl.h  socket.cpp
components/impl/include/__impl/: concurrency_freertos.h  concurrency_posix.h
components/impl/include/impl/: concurrency.h  helpers.h  log.h  socket.h
components/net_controller/: CMakeLists.txt  net_controller.cpp  receiver.cpp  sender.cpp
components/net_controller/include/: net_controller.h  receiver.h  sender.h
components/net_controller/private/: net_controller_private.h
components/receiver/: CMakeLists.txt  receiver.cpp  receiver.h
components/sender/: CMakeLists.txt  sender.cpp  sender.h
server/: .gitignore  CMakeLists.txt  main.cpp
